--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
               </div>
               <div>
                 <h3 class="mb-4">Email Address</h3>
-                <p><a href=""mailto:qazishahijahan1210@gmail.com">qazishahijahan1210@gmail.com</a></p>
+                <p><a href="mailto:qazishahijahan1210@gmail.com">qazishahijahan1210@gmail.com</a></p>
               </div>
             </div>
           </div>
